--- a/style.css
+++ b/style.css
@@ -6,19 +6,19 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: "Baloo 2", monospace;
+  color: #2f5876;
 }
 
 h1 {
   font-size: 35px;
   font-weight: 400;
-  color: #2f5876;
   text-align: left;
   margin: 0px 0px 0px 25px;
 }
 
 a:link,
 a:visited {
-  color: #000000;
+  color: #2f5876;
   outline: 0;
   text-decoration: none;
 }
@@ -48,7 +48,6 @@ img {
 }
 
 .version {
-  color: #444;
   font-size: 18px;
 }
 
@@ -74,7 +73,6 @@ img {
 .flex i,
 form i {
   font-size: 40px;
-  color: #2f5876;
 }
 
 #toolbox-icon {
@@ -127,7 +125,7 @@ form a {
   padding: 0;
   width: 200px;
   /* border: 1px solid grey; */
-  margin-top: 75px;
+  margin-top: 25px;
   margin-left: 15px;
 }
 
@@ -142,7 +140,6 @@ form a {
   padding-left: 1em;
   font-size: 1.1em;
   height: 18px;
-  color: #2f5876;
 }
 
 #sortable li:last-child {
@@ -156,5 +153,20 @@ form a {
 
 .fa-pencil-square-o {
   float: right;
-  color: #2f5876;
+}
+
+#edit-form {
+  padding: 5px;
+  margin-top: 75px;
+  margin-left: 25px;
+  width: 3540px;
+}
+
+#edit-titles,
+#edit-inputs {
+  display: inline-block;
+}
+
+#edit-titles span {
+  display: block;
 }
