add button to add new item

--- a/style.css
+++ b/style.css
@@ -183,3 +183,11 @@ form a {
 #save-button:hover {
   cursor: pointer;
 }
+
+#add-item {
+  margin-left: 15px;
+}
+
+#add-item i {
+  margin-right: 5px;
+}
