--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ form i {
 
 #settings-icon:hover,
 #close-icon:hover,
-.fa-pencil-square-o:hover {
+.fa-pencil-square-o:hover,
+#add-item:hover {
   cursor: pointer;
 }
 
